# vol_decomposition

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.ja.md  README.md  README_日本語.md  example.ipynb  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: __init__.py  decomposition_pipeline.py  plot.py  vol_decomposition.py
src/_c_src/: vol_decomposition.c
src/utils/: __init__.py  generator.py  plot.py
tests/: test_vol_decomposition.py
