[project]
name = "vol-decomposition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
    "ARG", # flake8-unused arguments
    "BLE", # blind-except
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # sort imports
    "RET", # flake8-return
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E731",   # Do not assign a lambda expression, use a def
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "F403",   # Ignore C extension imports that can't be found
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files.
"__init__.py" = ["F401", "W292"]

# Do not require typehinting for unit-tests, allow unused arguments
"tests/*.py" = ["ANN", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"